[B]1.6.1[/B]

- Añadida la posibilidad de elegir entre la web móvil o principal de FilmAffinity
- Revisados los patrones de búsqueda en FilmAffinity

[B]1.6.0[/B]

- Modificada la codificación del scraper a UTF-8
- Actualizada la URL de Google con el https
- Modificada la búsqueda de FilmAffinity para utilizar la versión móvil
- Añadida la opción de obtener el eslogan y la calificación por edades de TMDB
- Reestructuradas las secciones de opciones de extras IMDB y TMDB
- Mejorada la búsqueda en trakt.tv
- Añadida la búsqueda en fanart.tv
- Añadida detección del IMDBid a través de nfourl
- Modificada la búsqueda de IMDB para utilizar funciones propias de su scraper
- Revisada la obtención de posters y trailers de FilmAffinity
- Revisado el refinado de la búsqueda en IMDB por apellido de director

[B]1.5.9[/B]

- Revisada la obtención de año, dirección, guión y título original de la web de FilmAffinity

[B]1.5.8[/B]

- Revisada la obtención de títulos y puntuaciones de la web de FilmAffinity

[B]1.5.7[/B]

- Revisada la búsqueda condicional de HDTrailers

[B]1.5.6[/B]

- Soporte para la actualización de la web de FilmAffinity

[B]1.5.5[/B]

- Mejorada la búsqueda de títulos en FilmAffinity con caracteres especiales
- Mejorada la búsqueda de títulos en google permitiendo múltiples resultados

[B]1.5.4[/B]

- Mejorada la obtención de información extra (Top 250, calificación MPAA, eslogan, puntuación y número de votos) de IMDB

[B]1.5.3[/B]

- Mejoradas tanto la búsqueda en Google como la obtención de información extra

[B]1.5.2[/B]

- Añadida la capacidad de selección del mejor resultado en IMDB

[B]1.5.1[/B]

- Actualización de la búsqueda de información en IMDB

[B]1.5.0[/B]

- Añadida la búsqueda de información adicional buscando en cascada dentro de IMDB
- Añadida la selección de trailers de TheMovieDB (gracias XBMCERO)
- Añadida la selección de idioma para los posters de TheMovieDB (gracias XBMCERO)
- Revisada la descarga de póster de FilmAffinity