@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="UTF-8" standalone="yes"?>
 <addon  id="metadata.filmaffinity.com"
 	name="FilmAffinity"
-	version="1.6.1"
+	version="1.6.2"
 	provider-name="hectorZiN|agjacome|xbmcero|pancheto|MaDDoGo">
 	<requires>
 	    <import addon="xbmc.metadata" version="2.1.0"/>
