@@ -1,22 +1,22 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<scraper framework="1.1" date="2014-09-25">
+<scraper framework="1.1" date="2014-11-05">
 
 	<!--obtención de la url desde el fichero .nfo -->
 	<NfoUrl dest="3">
 		<RegExp conditional="!FAmobile" input="$$5" output="&lt;url&gt;http://www.filmaffinity.com/es/film\1.html&lt;/url&gt;" dest="3">
 			<RegExp input="$$1" output="\1" dest="5">
-				<expression noclean="1">filmaffinity.com/[^/]+/[^0-9]+([0-9]+)</expression>
+				<expression noclean="1">/(www|m).filmaffinity.com/[^/]+/[^0-9]+([0-9]+)</expression>
 			</RegExp>
-			<expression noclean="1" />
+			<expression noclean="1">(.+)</expression>
 		</RegExp>
 		<RegExp conditional="FAmobile" input="$$5" output="&lt;url&gt;http://m.filmaffinity.com/es/movie.php?id=\1&lt;/url&gt;" dest="3">
 			<RegExp input="$$1" output="\1" dest="5">
-				<expression noclean="1">filmaffinity.com/[^/]+/[^0-9]+([0-9]+)</expression>
+				<expression noclean="1">/(www|m).filmaffinity.com/[^/]+/[^0-9]+([0-9]+)</expression>
 			</RegExp>
 			<RegExp input="$$1" output="&amp;tt=tt\1" dest="5+">
 				<expression noclean="1">imdb.com/title/tt([0-9]+)</expression>
 			</RegExp>
-			<expression noclean="1" />
+			<expression noclean="1">(.+)</expression>
 		</RegExp>
 	</NfoUrl>
 
@@ -264,8 +264,8 @@
 			</RegExp>
 
 			<!-- descarga el poster principal de filmaffinity -->
-			<RegExp conditional="FirstFilmAffinityPoster" input="$$1" output="&lt;thumb aspect=&quot;poster&quot;&gt;http://pics.filmaffinity.com/\1&lt;/thumb&gt;" dest="5+">
-				<expression noclean="1">pics.filmaffinity.com/([^&quot;]+)</expression>
+			<RegExp conditional="FirstFilmAffinityPoster" input="$$1" output="&lt;thumb aspect=&quot;poster&quot;&gt;http://pics.filmaffinity.com/\2&lt;/thumb&gt;" dest="5+">
+				<expression noclean="1">(href|src)=&quot;http://pics.filmaffinity.com/([^&quot;]+)</expression>
 			</RegExp>
 			
 			<!-- descarga todos los posters que haya en filmaffinity -->
